--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,5 @@
 {
     "name": "flight-center",
-    "version": "0.10.0",
     "private": true,
     "dependencies": {
         "@fortawesome/fontawesome-pro": "^6.4.0",
@@ -8,10 +7,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.0",
         "@fortawesome/pro-solid-svg-icons": "^6.4.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^12.1.4",
-        "@testing-library/user-event": "^13.5.0",
-        "@tfdidesign/smartcars3-ui-sdk": "^0.9.1",
+        "@tfdidesign/smartcars3-ui-sdk": "^0.10.4",
         "axios": "^1.3.4",
         "babel-plugin-macros": "^3.1.0",
         "react": "^18.0.0",
@@ -19,11 +15,12 @@
         "react-range": "^1.8.14",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
+        "react-tooltip": "^5.20.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "prettier-check": "npx prettier --check ."
